# proompt

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: main.rs
tests/: cli.rs
