[package]
name = "proompt"
description = "Concatenate a directory full of files into a single prompt for use with LLMs"
version = "0.1.0"
edition = "2021"
license = "MIT"
readme = "README.md"
repository = "https://github.com/code-inflation/proompt"
keywords = ["cli", "llm"]
categories = ["command-line-utilities"]
exclude = [".github/"]

[dependencies]
clap = { version = "4.5.26", features = ["derive"] }
glob = "0.3.2"
ignore = "0.4.23"

[dev-dependencies]
assert_cmd = "2.0.16"
predicates = "3.1.3"
tempfile = "3.15.0"
