[package]
name = "proompt"
description = "Concatenate a directory full of files into a single prompt for use with LLMs"
version = "0.1.0"
edition = "2021"
license = "MIT"
readme = "README.md"
repository = "https://github.com/code-inflation/proompt"
keywords = ["cli", "llm"]
categories = ["command-line-utilities"]
exclude = [".github/"]

[dependencies]
clap = { version = "4.5.53", features = ["derive"] }
glob = "0.3.3"
ignore = "0.4.25"

[dev-dependencies]
assert_cmd = "2.1.1"
predicates = "3.1.3"
tempfile = "3.24.0"
